src/App.css
/*****************************/
/* GUIDELINES */
/*****************************/

/* 
---01 TYPOGRAPHY SYSTEM ---
- Font sizes (px)
10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98

- Font weights
Default: 400
Medium: 500
Semi-bold: 600
Bold: 700

- Line heights
Default: 1
Small: 1.05
Medium: 1.20
Paragraph: 1.60
Large: 1.8

- Letter spacing
-0.75px
-0.50px
 0.75px

---02 COLORS ---
- Primary: #21033a
- Tints: #170229 #1a022e #1e0334
- Shades: #e1d9e8 #976ea5 #572981
- Accents: #c91668 #1b93c2
- Darks: #11021d #0d0117
- Grays: #888 #666 #555 #333 #ebe0ea

---03 IMAGES ---

---05 SHADOWS ---
0 2.4rem 4.8rem rgba(0, 0, 0, 0.08)
0 1.2rem 3.2rem rgba(0, 0, 0, 0.03)

---06 BORDER-RADIUS ---
Default: 9px
Medium: 11px

---07 WHITESPACE ---
2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
*/

:root {
  --color-primary: #21033a;
  --color-accent-primary: #1b93c2;
  --color-accent-secondary: #c91668;
  --color-tints-lighter: #1e0334;
  --color-tints-darker: #170229;
  --color-shades-lighter: #e1d9e8;
  --color-shades-normal: #976ea5;
  --color-shades-darker: #572981;
  --color-grays-lighter: #ebe0ea;
  --color-grays-darker: #333;
  --color-white: #fff;
  --color-dark: #000;
  --color-bg-normal: #170229;
  --color-bg-dark: #11021d;
  --color-bg-darker: #0d0117;
  --color-bg-blur: transparent /*rgb(13, 1, 23, 0.3)*/;
  --linear-gradient-bg: linear-gradient(
    to bottom right,
    #170229,
    #1a022e,
    #1e0334,
    #21033a
  );
  --linear-gradient-nav: linear-gradient(
    to bottom right,
    rgba(23, 2, 41, 0.97),
    rgba(26, 2, 46, 0.97),
    rgba(30, 3, 52, 0.97),
    rgba(33, 3, 58, 0.97)
  );
  --linear-gradient-hero: linear-gradient(
    to bottom right,
    rgba(23, 2, 41, 0.85),
    rgba(26, 2, 46, 0.85),
    rgba(30, 3, 52, 0.85),
    rgba(33, 3, 58, 0.85)
  );
  --linear-gradient-accent: linear-gradient(to right, #1b93c2, #c91668);
  --linear-gradient-border: linear-gradient(
    to right,
    #1b93c2,
    #976ea5,
    #c91668
  );
  --linear-gradient-btn-primary: linear-gradient(to right, #c91668, #572981);
  --linear-gradient-btn-secondary: linear-gradient(to right, #1b93c2, #c91668);
}

*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
  overflow-x: hidden;
  /* scroll-behavior: smooth; */
}

body {
  font-family: 'Roboto', sans-serif;
  line-height: 1;
  font-weight: 400;
  color: var(--color-white);
  background-image: var(--linear-gradient-bg);
  overflow-x: hidden;
}

.App {
  min-width: 40em;
  width: 100%;
  height: 100%;
}

/*****************************/
/* GENERAL COMPONENTS*/
/*****************************/

button {
  font-size: 1.8rem;
  font-weight: 700;
  background-color: transparent;
  border-style: none;
  cursor: pointer;
}

a:link,
a:visited {
  font-size: 1.8rem;
  font-weight: 500;
  color: var(--color-white);
  text-decoration: none;
  transition: color 0.3s;
}

a:hover,
a:active {
  color: var(--color-accent-primary);
}

/*****************************/
/* QUERIES*/
/*****************************/
/**************************/
/* BELOW 1088px (Landscape tablets) */
/**************************/
@media (max-width: 68em) {
}

/**************************/
/* BELOW 960px (Portrait tablets) */
/**************************/
@media (max-width: 59em) {
  html {
    font-size: 56.25%;
  }
}

/**************************/
/* BELOW 768px (Portrait small tablets) */
/**************************/
@media (max-width: 48em) {
  html {
    font-size: 50%;
  }
}

/**************************/
/* BELOW 592px (Phones) */
/**************************/
@media (max-width: 37em) {
}

